Life is Beautiful💜

--- a/profile.html
+++ b/profile.html
@@ -81,7 +81,7 @@
             <div class="flex items-center gap-2">
                 <button id="pf-logout-header" type="button"
                     class="desktop-only inline-flex items-center gap-1.5 bg-red-600 text-white px-4 py-2 rounded-lg font-semibold shadow hover:bg-red-700 transition">
-                    🚪 <span data-i18n="profileLogout">Logout</span>
+                    ➜] <span data-i18n="profileLogout">Logout</span>
                 </button>
                 <button id="menu-toggle" class="md:hidden p-2 rounded-lg bg-red-100 text-red-700 hover:bg-red-200"
                     aria-label="Open menu" type="button">
@@ -106,7 +106,7 @@
                 <hr class="border-t border-red-200 my-1">
                 <button id="mobile-logout-btn"
                     class="hidden text-left px-3 py-2 rounded hover:bg-red-50 text-red-600 font-medium">
-                    🚪 Logout
+                    ➜] Logout
                 </button>
             </div>
         </div>
