--- a/about.html
+++ b/about.html
@@ -76,6 +76,7 @@
                 <a id="nav-join-link" href="join.html" class="px-3 py-2 rounded hover:bg-red-50 text-red-700" data-i18n="navJoin">Join</a>
                 <a id="nav-search-link" href="search.html" class="px-3 py-2 rounded hover:bg-red-50 text-red-700" data-i18n="navSearch">Search</a>
                 <a id="nav-contact-link" href="index.html#contact" class="px-3 py-2 rounded hover:bg-red-50 text-red-700" data-i18n="navContact">Contact</a>
+                <a id="nav-dashboard-link" href="index.html#admin-panel" class="hidden px-3 py-2 rounded hover:bg-red-50 text-red-700 font-bold" data-i18n="navDashboard">Dashboard</a>
             </div>
             <div class="flex items-center gap-4">
                 <button id="login-btn"
