--- a/events.html
+++ b/events.html
@@ -56,6 +56,7 @@
                 <a id="nav-join-link" href="join.html" class="px-3 py-2 rounded hover:bg-red-50 text-red-700">Join</a>
                 <a id="nav-search-link" href="search.html" class="px-3 py-2 rounded hover:bg-red-50 text-red-700">Search</a>
                 <a id="nav-contact-link" href="index.html#contact" class="px-3 py-2 rounded hover:bg-red-50 text-red-700">Contact</a>
+                <a id="nav-dashboard-link" href="index.html#admin-panel" class="hidden px-3 py-2 rounded hover:bg-red-50 text-red-700 font-bold" data-i18n="navDashboard">Dashboard</a>
             </div>
             <div class="flex items-center gap-4">
                 <button id="login-btn"
