--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                     data-i18n="navSearch">Search</a>
                 <a id="nav-contact-link" href="#contact" class="px-3 py-2 rounded hover:bg-red-50 text-red-700"
                     data-i18n="navContact">Contact</a>
+                <a id="nav-dashboard-link" href="#admin-panel" class="hidden px-3 py-2 rounded hover:bg-red-50 text-red-700 font-bold"
+                    data-i18n="navDashboard">Dashboard</a>
             </div>
             <div class="flex items-center gap-4">
                 <button id="login-btn"
